testdata/baselines/reference/submodule/compiler/accessorInferredReturnTypeErrorInReturnStatement.errors.txt
accessorInferredReturnTypeErrorInReturnStatement.ts(4,18): error TS2339: Property 'collection' does not exist on type '{ readonly primaryPath: any; }'.


==== accessorInferredReturnTypeErrorInReturnStatement.ts (1 errors) ====
    export var basePrototype = {
      get primaryPath() {
        var _this = this;
        return _this.collection.schema.primaryPath;
                     ~~~~~~~~~~
!!! error TS2339: Property 'collection' does not exist on type '{ readonly primaryPath: any; }'.
      },  
    };
    